[package]
name = "OS-Kernel"
version = "0.1.0"
authors = ["Peterlits Zo <peterlitszo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# Instead of need `eh_personality`, we use `abort` to deal with the panic
panic = "abort"

[profile.release]
# Instead of need `eh_personality`, we use `abort` to deal with the panic
panic = "abort"

[dependencies]
