[package]
name = "os_kernel"
version = "0.1.0"
authors = ["Peterlits Zo <peterlitszo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# riscv have tools for RISV-C-based CPU
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

# spin can lock the data to avoid changing by others
spin = "0.5.2"

# buddy_system_allocator is used to handle memory
buddy_system_allocator = "0.6"
